packages/react/src/SubdomainNavBar/SubdomainNavBar.module.css
/*
 * Main styles for the subdomain navigation bar.
 */
.SubdomainNavBar {
  position: relative;
  z-index: 90;
  font-weight: 550;
  background: var(--brand-SubdomainNavBar-canvas-default);
  -webkit-backdrop-filter: blur(16px);
  backdrop-filter: blur(16px);
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  transition: background-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default),
    border-color var(--brand-animation-duration-fast) var(--brand-animation-easing-default);
  height: 75px;
}

/*
 * Outer container
 */
.SubdomainNavBar-outer-container {
  z-index: 90;
}

.SubdomainNavBar-outer-container--fixed {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
}

/*
 * Inner container
 */
.SubdomainNavBar-inner-container {
  display: flex;
  padding: 4px 28px;
}

.SubdomainNavBar-inner-container--centered {
  max-width: 1280px;
  margin: 0 auto;
}

@media screen and (min-width: 48rem) {
  .SubdomainNavBar-inner-container {
    padding: 4px 32px;
  }
}

.SubdomainNavBar-inner-container--search-open {
  animation: fade-out 150ms;
}

/*
 * Logo and title area
 */
.SubdomainNavBar-title-area {
  display: inline-flex;
  list-style-type: none;
  align-items: center;
  gap: 16px;
  padding: 0;
  margin: 0;
  max-width: 340px;
  color: var(--brand-color-text-default);
  padding: var(--base-size-16) 0;
}

.SubdomainNavBar-logo-mark {
  color: var(--brand-color-text-default);
  position: relative;
}

.SubdomainNavBar-back-arrow {
  position: absolute;
  left: calc(-32px + 5px);
  opacity: 0;
  transition: opacity var(--brand-animation-duration-fast), transform var(--brand-animation-duration-fast) ease;
  transform: translateX(5px);
  color: var(--brand-color-text-muted);
}

.SubdomainNavBar-logo-mark:hover .SubdomainNavBar-back-arrow {
  opacity: 1;
  transform: translateX(0);
}

.SubdomainNavBar-title-separator {
  color: var(--brand-color-text-muted);
  font-weight: var(--base-text-weight-semibold);
  font-size: var(--base-size-32);
  line-height: 29px;
}

.SubdomainNavBar-logo-mark svg {
  width: 32px;
  height: 32px;
}

.SubdomainNavBar-title {
  font-family: var(--brand-heading-fontFamily);
  font-weight: var(--base-text-weight-semibold);
  font-size: var(--base-size-24);
  line-height: var(--base-size-32);
  color: var(--brand-color-text-default);
  text-decoration: none;
  padding-right: var(--base-size-16);
  white-space: nowrap;
}

.SubdomainNavBar-title:hover {
  text-decoration: none;
}

/*
 * Primary navigation link area
 */
.SubdomainNavBar-primary-nav {
  display: inline-flex;
  list-style-type: none;
  align-items: center;
  padding: 0;
  margin: 0;
}

.SubdomainNavBar-primary-nav-list {
  list-style-type: none;
}

@media screen and (max-width: 767px) {
  .SubdomainNavBar-primary-nav-list {
    display: none;
  }

  .SubdomainNavBar-primary-nav-list--invisible {
    display: none;
  }

  .SubdomainNavBar-primary-nav-list--visible {
    display: block;
    margin: 0;
    padding: 0;
  }
}

@media screen and (min-width: 48rem) {
  .SubdomainNavBar-primary-nav-list {
    display: flex;
    align-items: center;
    width: 100%;
    max-width: 150px;
    padding: 0;
    margin: 0 24px 0 0;
    /* overflow: hidden; */
  }
}

@media screen and (min-width: 768px) {
  .SubdomainNavBar-primary-nav-list {
    max-width: 100px;
  }
}

@media screen and (min-width: 850px) {
  .SubdomainNavBar-primary-nav-list {
    max-width: 200px;
  }
}

@media screen and (min-width: 1024px) {
  .SubdomainNavBar-primary-nav-list {
    max-width: 300px;
  }
}

@media screen and (min-width: 1280px) {
  .SubdomainNavBar-primary-nav-list {
    max-width: 520px;
    margin-right: 80px;
  }
}

.SubdomainNavBar-primary-nav-list-item {
  white-space: nowrap;
}

@media screen and (max-width: 767px) {
  .SubdomainNavBar-primary-nav-list-item {
    animation-name: fade-in-down-staggered;
    animation-duration: 500ms;
    animation-delay: calc(var(--animation-order) * 80ms);
    animation-fill-mode: both;
    animation-timing-function: var(--brand-animation-easing-default);
  }
}

@media screen and (min-width: 48rem) {
  .SubdomainNavBar-primary-nav-list-item--visible {
    order: 0;
    visibility: visible;
    opacity: 1;
  }

  .SubdomainNavBar-primary-nav-list-item--invisible {
    order: 100;
    visibility: hidden;
    pointer-events: none;
  }

  .SubdomainNavBar-primary-nav-list-item--overflow {
    order: 99;
    position: relative;
    right: 0;
  }
}

.SubdomainNavBar-link {
  position: relative;
  display: block;
  color: var(--brand-color-text-default);
  font-family: var(--brand-heading-fontFamily);
  font-weight: var(--base-text-weight-normal);
  font-size: var(--base-size-20);
  line-height: var(--base-size-20);
  padding: var(--base-size-8) var(--base-size-16) var(--base-size-16) var(--base-size-28);
  text-decoration: none;
}

.SubdomainNavBar-link:hover {
  text-decoration: none;
}

@media screen and (max-width: 767px) {
  .SubdomainNavBar-link:first-of-type {
    padding-top: var(--base-size-24);
  }
}
/* ... */

